force-app/main/default/objects/API_Handler__mdt/API_Handler__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata is use to handle the APIs.</description>
    <label>API Handler</label>
    <pluralLabel>API Handler</pluralLabel>
</CustomObject>