force-app/main/default/objects/API_Handler__mdt/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <referenceTo>API_Type__mdt</referenceTo>
    <relationshipLabel>API Handler</relationshipLabel>
    <relationshipName>API_Handler</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>