force-app/main/default/objects/API_Handler__mdt/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>FRONT</fullName>
            </value>
            <value>
                <fullName>BACK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>