force-app/main/default/objects/API_Handler__mdt/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar Card</fullName>
                <default>true</default>
                <label>Aadhaar Card</label>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>High Mark</fullName>
            </value>
            <value>
                <fullName>Mobile OTP</fullName>
            </value>
            <value>
                <fullName>Validate OTP</fullName>
            </value>
            <value>
                <fullName>Driver Licence</fullName>
            </value>
            <value>
                <fullName>Electricity Bill</fullName>
            </value>
            <value>
                <fullName>Property Tax</fullName>
            </value>
            <value>
                <fullName>Vehicle Search Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>